added page for new ingredients with gif support/title/linking to main index.html with ordered/unordered lists in the form of ingredients/prep

--- a/index.html
+++ b/index.html
@@ -7,5 +7,12 @@
 </head>
 <body>
     <h1>Optimum Gustum</h1>
+
+<div>
+    <img src = "recipes/rangoons.jpg" style="width:400px; height:400px;" alt="this is a picture of some rangoons">
+    </br>
+    <a href= "recipes/rangoon.html"><h2>Rangoons</h2></a>
+</div>
+
 </body>
 </html>
