added in new page and return to home index button functionality

--- a/index.html
+++ b/index.html
@@ -14,5 +14,11 @@
     <a href= "recipes/rangoon.html"><h2>Rangoons</h2></a>
 </div>
 
+<div>
+    <img src = "recipes/noodles.gif" style="width:450px; height:400px;" alt="this is a picture of some rangoons">
+    </br>
+    <a href= "recipes/chowmein.html"><h2>Chowmein</h2></a>
+</div>
+
 </body>
 </html>
