--- a/recipes/rangoon.html
+++ b/recipes/rangoon.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>rangoons</title>
 </head>
 
 <body>
+    <a href="/index.html"><button>Return home</button></a>
     <h1>Crab Rangoons</h1> </br>
 
 <img src="/recipes/crab-rangoons.gif" alt="this is a picture of some rangoons" height="350"/>
