add in new tab opening functionality

--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 <div>
     <img src = "recipes/rangoons.jpg" style="width:400px; height:400px;" alt="this is a picture of some rangoons">
     </br>
-    <a href= "recipes/rangoon.html"><h2>Rangoons</h2></a>
+    <a href= "recipes/rangoon.html" target="_blank" rel="noopener noreferrer"><h2>Rangoons</h2></a>
 </div>
 
 <div>
     <img src = "recipes/noodles.gif" style="width:450px; height:400px;" alt="this is a picture of some rangoons">
     </br>
-    <a href= "recipes/chowmein.html"><h2>Chowmein</h2></a>
+    <a href= "recipes/chowmein.html" target="_blank" rel="noopener noreferrer"><h2>Chowmein</h2></a>
 </div>
 
 </body>
