correction in message

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </div>
 
 <div>
-    <img src = "recipes/noodles.gif" style="width:450px; height:400px;" alt="this is a picture of some rangoons">
+    <img src = "recipes/noodles.gif" style="width:450px; height:400px;" alt="this is a picture of some noodles">
     </br>
     <a href= "recipes/chowmein.html" target="_blank" rel="noopener noreferrer"><h2>Chowmein</h2></a>
 </div>
