updated pathing to load on web

--- a/recipes/chowmein.html
+++ b/recipes/chowmein.html
@@ -7,10 +7,10 @@
 </head>
 
 <body>
-    <a href="/index.html"><button>Return home</button></a>
+    <a href="../index.html">Return Home</a>
     <h1>Chow Mein</h1> </br>
 
-<img src="/recipes/chowmein.gif" alt="this is a picture of some delicious Chowmein" height="350"/>
+<img src="chowmein.gif" alt="this is a picture of some delicious Chowmein" height="350"/>
 
 <h3>Chowmein, a chef staple!</h3>
 
