--- a/recipes/rangoon.html
+++ b/recipes/rangoon.html
@@ -7,10 +7,10 @@
 </head>
 
 <body>
-    <a href="/index.html"><button>Return home</button></a>
+    <a href="../index.html">Return Home</a>
     <h1>Crab Rangoons</h1> </br>
 
-<img src="/recipes/crab-rangoons.gif" alt="this is a picture of some rangoons" height="350"/>
+<img src="crab-rangoons.gif" alt="this is a picture of some rangoons" height="350"/>
 
 <h3>Want to learn how to make the most creamy, delicious rangoons?</h3>
 
