added in flexbox styling to ensure all items were aligned in a way i SEE fit

--- a/index.html
+++ b/index.html
@@ -3,22 +3,55 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Gustus</title>
 </head>
 <body>
     <h1>Optimum Gustum</h1>
 
-<div>
-    <img src = "recipes/rangoons.jpg" style="width:400px; height:400px;" alt="this is a picture of some rangoons">
-    </br>
-    <a href= "recipes/rangoon.html" target="_blank" rel="noopener noreferrer"><h2>Rangoons</h2></a>
-</div>
+    <div class = "menu-items">
+        <div class = "rangoons">
+            <div class = "rangoon-image">
+                <img src = "recipes/rangoons.jpg" style="width:400px; height:400px;" alt="this is a picture of some rangoons">
+            </div>
+           
+            <div class = "rangoon-text">
+            <a href= "recipes/rangoon.html" target="_blank" rel="noopener noreferrer"><h2>Rangoons</h2></a>
+            </div>
+        </div>
 
-<div>
-    <img src = "recipes/noodles.gif" style="width:450px; height:400px;" alt="this is a picture of some noodles">
-    </br>
-    <a href= "recipes/chowmein.html" target="_blank" rel="noopener noreferrer"><h2>Chowmein</h2></a>
-</div>
+        <div class = "chowmein">
+            <div class = "chowmein-image">
+                <img src = "recipes/noodles.gif" style="width:450px; height:400px;" alt="this is a picture of some noodles">
+            </div>
 
+            <div class = "chowmein-text">
+                <a href= "recipes/chowmein.html" target="_blank" rel="noopener noreferrer"><h2>Chowmein</h2></a>
+            </div>    
+        </div>
+    </div>
+
+    <div class = "menu-items2">
+        <div class = "chowmein2">
+            <div class = "chowmein-image2">
+                <img src = "recipes/noodles.gif" style="width:450px; height:400px;" alt="this is a picture of some noodles">
+            </div>
+
+            <div class = "chowmein-text2">
+                <a href= "recipes/chowmein.html" target="_blank" rel="noopener noreferrer"><h2>Chowmein</h2></a>
+            </div>    
+        </div>
+
+        <div class = "chowmein2">
+            <div class = "chowmein-image2">
+                <img src = "recipes/noodles.gif" style="width:450px; height:400px;" alt="this is a picture of some noodles">
+            </div>
+
+            <div class = "chowmein-text2">
+                <a href= "recipes/chowmein.html" target="_blank" rel="noopener noreferrer"><h2>Chowmein</h2></a>
+            </div>    
+        </div>
+
+    </div>
 </body>
 </html>
