use grid format to style additional recipe entries + responsive, added custom external font family Montserrat

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
     <h1>Optimum Gustum</h1>
 
-    <div class = "menu-items">
-        <div class = "rangoons">
+    <div class = "menu-container">
+        <div class = "menu-item">
             <div class = "rangoon-image">
                 <img src = "recipes/rangoons.jpg" style="width:400px; height:400px;" alt="this is a picture of some rangoons">
             </div>
@@ -20,7 +20,7 @@
             </div>
         </div>
 
-        <div class = "chowmein">
+        <div class = "menu-item">
             <div class = "chowmein-image">
                 <img src = "recipes/noodles.gif" style="width:450px; height:400px;" alt="this is a picture of some noodles">
             </div>
@@ -29,10 +29,8 @@
                 <a href= "recipes/chowmein.html" target="_blank" rel="noopener noreferrer"><h2>Chowmein</h2></a>
             </div>    
         </div>
-    </div>
 
-    <div class = "menu-items2">
-        <div class = "chowmein2">
+        <div class = "menu-item">
             <div class = "chowmein-image2">
                 <img src = "recipes/noodles.gif" style="width:450px; height:400px;" alt="this is a picture of some noodles">
             </div>
@@ -42,16 +40,45 @@
             </div>    
         </div>
 
-        <div class = "chowmein2">
+        <div class = "menu-item">
             <div class = "chowmein-image2">
                 <img src = "recipes/noodles.gif" style="width:450px; height:400px;" alt="this is a picture of some noodles">
             </div>
 
             <div class = "chowmein-text2">
                 <a href= "recipes/chowmein.html" target="_blank" rel="noopener noreferrer"><h2>Chowmein</h2></a>
-            </div>    
+            </div> 
         </div>
 
+        <div class = "menu-item">
+            <div class = "chowmein-image2">
+                <img src = "recipes/noodles.gif" style="width:450px; height:400px;" alt="this is a picture of some noodles">
+            </div>
+
+            <div class = "chowmein-text2">
+                <a href= "recipes/chowmein.html" target="_blank" rel="noopener noreferrer"><h2>Chowmein</h2></a>
+            </div> 
+        </div>
+        
+        <div class = "menu-item">
+            <div class = "chowmein-image2">
+                <img src = "recipes/noodles.gif" style="width:450px; height:400px;" alt="this is a picture of some noodles">
+            </div>
+
+            <div class = "chowmein-text2">
+                <a href= "recipes/chowmein.html" target="_blank" rel="noopener noreferrer"><h2>Chowmein</h2></a>
+            </div> 
+        </div>
+
+        <div class = "menu-item">
+            <div class = "chowmein-image2">
+                <img src = "recipes/noodles.gif" style="width:450px; height:400px;" alt="this is a picture of some noodles">
+            </div>
+
+            <div class = "chowmein-text2">
+                <a href= "recipes/chowmein.html" target="_blank" rel="noopener noreferrer"><h2>Chowmein</h2></a>
+            </div> 
+        </div>
     </div>
 </body>
 </html>
