Huge UI overhaul; stupid me did this in one big commit. Here's a monologue: restructured entire project file system and images, centered all things on all pages for both mobile view and desktop view; applied styling across all pages. Applied mobile view scaling for rendering and centering elements correctly using text indents and removed some of the useless sliding animations for H1 elements.

--- a/chowmein.html
+++ b/chowmein.html
@@ -3,25 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Chowmein</title>
 </head>
 
 <body>
-    <a href="../index.html">Return Home</a>
-    <h1>Chow Mein</h1> </br>
+    <button onclick="location.href='../index.html'" type="button">Return Home</button>
+    
+    <div class="menu-title">
+        <h1>Chow Mein</h1>
+    </div>
 
-<img src="chowmein.gif" alt="this is a picture of some delicious Chowmein" height="350"/>
+    <div class="chowmein">
+        <img src="images/chowmein.gif" alt="this is a picture of some delicious Chowmein"/>
+    </div>
 
-<h3>Chowmein, a chef staple!</h3>
 
-<p>
-    Chow mein (/ˈtʃaʊ ˈmeɪn/ and /ˈtʃaʊ ˈmiːn/, simplified Chinese: 炒面; traditional Chinese: 炒麵; Pinyin: chǎomiàn) is a Chinese dish made from stir-fried noodles with vegetables and sometimes meat or tofu. </br>
-    Over the centuries, variations of chǎomiàn were developed in many regions of China; there are several methods of frying the noodles and a range of toppings can be used. </br>
-    It was introduced in other countries by Chinese immigrants.The dish is popular throughout the Chinese diaspora and appears on the menus of most Chinese restaurants abroad. It is particularly popular in India, Nepal, the UK, and the US.
-</p>
+<h2>Chowmein, a chef staple!</h2>
 
-<h3>Ingredients</h3>
+<span class="text">
+    <p>Chow mein (/ˈtʃaʊ ˈmeɪn/ and /ˈtʃaʊ ˈmiːn/, simplified Chinese: 炒面; traditional Chinese: 炒麵; Pinyin: chǎomiàn) is a Chinese dish made from stir-fried noodles with vegetables and sometimes meat or tofu.</p>
+    <p>Over the centuries, variations of chǎomiàn were developed in many regions of China; there are several methods of frying the noodles and a range of toppings can be used.</p>
+    <p>It was introduced in other countries by Chinese immigrants.The dish is popular throughout the Chinese diaspora and appears on the menus of most Chinese restaurants abroad. It is particularly popular in India, Nepal, the UK, and the US.</p>
+</span>
 
+<h2>Ingredients</h2>
+
+<span class="text">
 <ul>
     <li>225g dried or fresh egg noodles<i>drained</i></li>
     <li>1 tbsp sesame oil <i> plus 1 tsp</i></li>
@@ -33,14 +41,16 @@
     <li>1 tbsp Shaohsing rice wine or dry sherry/ <b>optional</b></li>
     <li>½ tsp golden caster sugar</li>
     <li>2 spring onions, finely chopped</li>
-    <h4>For the marinade</h4>
     <li>2 tsp light soy sauce</li>
     <li>2 tsp Shaoxing rice wine or dry Sherry/ <b>optional</b></li>
     <li>1 tsp sesame oil</li>
     <li>½ tsp freshly ground white pepper</li>
 </ul>
+</span>
 
-<h3>Prep-Work</h3>
+<h2>Prep-Work</h2>
+
+<span class="text">
 <ol>
     <li>Cook 225g egg noodles in a large pan of boiling water for 3-5 mins, then drain and put them in cold water. Drain thoroughly, toss them with 1 tbsp sesame oil and set aside.</li>
     <li>Combine 100g chicken breasts, cut into fine shreds, with 2 tsp light soy sauce, 2 tsp Shaohsing rice wine or dry sherry, 1 tsp sesame oil, ½ tsp white pepper and ½ tsp salt for the marinade, mix well and then leave to marinate for about 10 mins. </li>
@@ -53,6 +63,7 @@
     <li>Stir-fry for 2 mins. Return the chicken and any juices to the noodle mixture. Stir-fry for about 3-4 mins or until the chicken is cooked.</li>
     <li>Add 1 tsp sesame oil and give the mixture a few final stirs. Put on a warm platter and serve immediately.</li>
 </ol>
+</span>
 
 </body>
 </html>
