Added in some generic bracketing and lines

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <nav class="navbar">
         <h1>Gusto's Eatery</h1>
         <div class="nav-links">
-            <a href="https://github.com/HM-Devs">Menu</a>
-            <a href="https://github.com/HM-Devs">Contact Us</a>
-            <a href="https://github.com/HM-Devs">Github</a>
+            <a href="https://github.com/HM-Devs">Menu | </a>
+            <a href="https://github.com/HM-Devs">Contact Us | </a>
+            <a href="https://github.com/HM-Devs">Github | </a>
         </div>
     </nav>
 
