change URL pathing

--- a/chowmein.html
+++ b/chowmein.html
@@ -8,8 +8,8 @@
 </head>
 
 <body>
-    <button onclick="location.href='../index.html'" type="button">Return Home</button>
-    
+    <button onclick="location.href='..//index.html'" type="button">Return Home</button>
+
     <div class="menu-title">
         <h1>Chow Mein</h1>
     </div>
