reset url, for somer eason not working

--- a/rangoon.html
+++ b/rangoon.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <button onclick="location.href='..//index.html'" type="button">Return Home</button>
+    <button onclick="location.href='../index.html'" type="button">Return Home</button>
     <div class="menu-title">
         <h1>Crab Rangoons</h1> 
     </div>
